# retrievelit

./: .gitignore  README.md  bibtex.py  dblp.py  dblp_downloader.py  doi.py  doi_resolver.py  downloader_pipeline.py  log_config.py  main.py  mapper_factory.py  names.py  pdf.py  pdf_downloader.py  pipeline_step.py  pyproject.toml  pytest.ini  requirements-for-dev.txt  requirements.txt  setup.py  utils.py  venues.py
doi_pdf_mappers/: abstract_doi_mapper.py  abstract_mapper.py  abstract_resolved_doi_mapper.py  acm.py  computer_org_conf.py  computer_org_icse.py  computer_org_journal.py  computer_org_tse.py  elsevier.py  html_parser.py  scihub.py  springer.py
exceptions/: doi_pdf_mappers.py
src/retrievelit/: bibtex_builder.py  dblp_downloader.py  doi_resolver.py  downloader_pipeline.py  exceptions.py  log_config.py  main.py  mapper_factory.py  name_generator.py  pdf_downloader.py  pipeline_step.py  setup_files.py  utils.py  venues.py
src/retrievelit/doi_pdf_mappers/: abstract_doi_mapper.py  acm.py  base.py  computer_org.py  computer_org_conf.py  computer_org_journal.py  elsevier.py  html_parser.py  scihub.py  springer.py
tests/: test_bibtex.py  test_doi.py  test_mappers.py
tests/cassettes/test_doi/: test_doi_resolving[skip_ieee_rewrite_without_ieee_url].yaml  test_doi_resolving[with_ieee_rewrite].yaml  test_doi_resolving[without_ieee_rewrite].yaml
