[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "retrievelit"
version = "0.1.0"
description = "retrievelit: Research article corpus downloader"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "beautifulsoup4 <= 5",
    "bibtexparser <= 2",
    "requests <= 3",
    "tqdm <= 5"
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-clarity",
    "pytest-mock",
    "pytest-recording"
]

[project.urls]
"Homepage" = "https://github.com/serqco/retrievelit"
"Bug Tracker" = "https://github.com/serqco/retrievelit/issues"

[project.scripts]
retrievelit = "retrievelit.main:main"

[tool.pytest.ini_options]
markers = [
    "ip_restricted: Requires an IP with access to the Journal PDFs"
]
pythonpath = ["src", "tests"]